--- a/backend/drnk-jamz-api/package.json
+++ b/backend/drnk-jamz-api/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "mongoose": "^5.5.7",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "nodemon": "^1.19.0"
   }
 }
