--- a/backend/drnk-jamz-api/package.json
+++ b/backend/drnk-jamz-api/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "connect-mongodb-session": "^2.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "mongoose": "^5.5.7",
