--- a/frontend/drnk-jamz/package.json
+++ b/frontend/drnk-jamz/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dotenv": "^8.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-load-script": "0.0.6",
+    "react-scripts": "3.0.1",
+    "react-spotify-player": "^1.0.4",
+    "reactstrap": "^8.0.0",
+    "spotify-web-api-js": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
